add guidelines page and expand app shell

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -2,3 +2,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+svg {
+	@apply fill-surface-50;
+}
+
+html, body { @apply h-full overflow-hidden; }
