make home default select remove unused imports

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -7,4 +7,7 @@ svg {
 	@apply fill-surface-50;
 }
 
-html, body { @apply h-full overflow-hidden; }
+html,
+body {
+	@apply h-full overflow-hidden;
+}
